# myself

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
dlls/: CMakeLists.txt
dlls/dll1/: CMakeLists.txt  dll1.cpp  dll1.h
exes/: CMakeLists.txt
exes/ATM/: CMakeLists.txt  main.cpp
exes/QtQuickMvvmExample/: CMakeLists.txt  main.cpp
exes/QtQuickMvvmExample/Model/: MainModel.h
exes/QtQuickMvvmExample/ViewModel/: MainViewModel.h
exes/QtQuickMvvmExample/qml/QtQuickMvvmExample/: MainView.qml
exes/QtQuickMvvmExample/qml/QtQuickMvvmExample/Controls/: Button.qml  TextBox.qml
exes/QtQuickMvvmExample/qmlapplicationviewer/: qmlapplicationviewer.cpp  qmlapplicationviewer.h
exes/ScreenShot/: CMakeLists.txt  main.cpp  screenshot.cpp  screenshot.h
exes/boostTest/: CMakeLists.txt  main.cpp  test.json
exes/exe1/: CMakeLists.txt  main.cpp
exes/exe2/: CMakeLists.txt  main.cpp
exes/exe3/: CMakeLists.txt  main.cpp
exes/exe3/traits/: accum0.hpp  accum1.hpp  accum2.hpp  accum3.hpp  accum5.hpp  accum6.hpp  accum8.hpp  accumtraits2.hpp  accumtraits3.hpp  accumtraits4.hpp  apply1.hpp  csm1.hpp  csm2.hpp  csmtraits.hpp  ifthenelse.hpp  isclasst.hpp  promote1.hpp  promote2.hpp  promote3.hpp  promote4.hpp  promotearray.hpp  rparam.hpp  rparamcls.hpp  sumpolicy1.hpp  sumpolicy2.hpp  sumpolicy3.hpp  typeop1.hpp  typeop2.hpp  typeop3.hpp  typeop4.hpp
exes/openglunderqml/: CMakeLists.txt  main.cpp  main.qml  openglunderqml.qrc  squircle.cpp  squircle.h
exes/openglwindow/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.h
exes/stocqt/: CMakeLists.txt  main.cpp  shared.h  stocqt.qml  stocqt.qrc
exes/stocqt/content/: Banner.qml  Button.qml  CheckBox.qml  Settings.qml  StockChart.qml  StockInfo.qml  StockListDelegate.qml  StockListModel.qml  StockListView.qml  StockModel.qml  StockSettingPanel.qml  StockView.qml  stocqt.js
exes/stocqt/content/+windows/: Settings.qml
inc/: head1.h  project1.h
libssrc/: CMakeLists.txt
libssrc/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
shell/: cp-1.sh  cp-3.sh  cp-4.sh  cpall.sh
src/: CMakeLists.txt  main.cpp  project1.cpp
test/: test-gtest.cpp
